--- a/templates/index.html
+++ b/templates/index.html
@@ -460,7 +460,7 @@
     <span class="hljs-string">"userRating"</span>: <span class="hljs-number">3.0</span>, 
     <span class="hljs-string">"yearOfPublication"</span>: <span class="hljs-string">"1984"</span>
     },
-    ....sebanyak buku yang telah dirating....
+    ....sebanyak buku yang telah dirating...
 }
 </code></pre><p>window.$docsify = { name: &#39;&#39;, repo: &#39;&#39; }</p>
 </li>
